--- a/Create_post/Job vacancy post_files/post-create-form-input.css
+++ b/Create_post/Job vacancy post_files/post-create-form-input.css
@@ -1,5 +1,5 @@
 .r-down-main{
-    margin-top: 20px;
+    margin-top: 80px;
     padding-right: 20px;
     border-radius: 10px;
     background-color: #fff;
@@ -19,7 +19,7 @@
         min-height: 600px;
         height: auto;
         /* background-color: khaki; */
-        margin-top: 10px;
+        margin-top: 20px;
         margin-left:30px ;
         display: flex;
         flex-direction: column;
@@ -157,6 +157,8 @@
         font-size: 20px;
         width: 40%;
         flex-wrap: nowrap;
+        margin: 0;
+        padding: 0.25rem 0;
     }
     .email-div{
         display: flex;
@@ -188,6 +190,8 @@
     .website p{
         font-size: 20px;
         width: 40%;
+        margin: 0;
+        padding: 0.25rem 0;
     }
 
     .based-div {
