--- a/Create_post/Job vacancy post_files/body.css
+++ b/Create_post/Job vacancy post_files/body.css
@@ -20,7 +20,7 @@ body{
 }
 .parent{
     display: flex;
-    min-height: 1000px;
+    min-height: 800px;
     height: auto;
     background-color: #f4f5ff;
     /* background-color: rgb(167, 35, 35); */
@@ -38,7 +38,7 @@ body{
 }
 .r-right{
     /* background-color: blanchedalmond; */
-    min-height: 1000px;
+    min-height: 800px;
     height: auto;
     transition: width 0.3s ease;
     width: 100%;
@@ -50,7 +50,7 @@ body{
 }
 .r-right-down{
     background-color: #f4f5ff;
-    /* min-height: 1200px; */
+    /* min-height: 600px; */
     height: auto;
     overflow: hidden;
     
@@ -234,7 +234,7 @@ body{
 .r-right-down-main{
     position: relative;
     /* top: 50px; */
-    min-height: 800px;
+    min-height: 600px;
     height: auto;
     width: 100%;
     left: 1px;
@@ -247,9 +247,9 @@ body{
 }
 .r-down-main{
     
-    
-    right: 50px;
-    
+    /* position: absolute;
+    right: 50px; */
+    min-height: 600px;
     height: auto;
     width: 96%;
     /* background-color: bisque; */
