--- a/Create_post/Job vacancy post_files/modelInputs.css
+++ b/Create_post/Job vacancy post_files/modelInputs.css
@@ -10,7 +10,7 @@ body {
     line-height: 1.6;
     color: #1f2937;
     background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 /* Container */
@@ -104,6 +104,8 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 10px;
     /* margin-bottom: 1.5rem; */
+   
+
 }
 
 .salary-grid {
@@ -116,9 +118,12 @@ body {
 .form-group {
     display: flex;
     flex-direction: column;
-    
+    max-height: 150px;
 }
-
+.form-group-description{
+    display: flex;
+    flex-direction: column;
+}
 .form-label {
     font-size: 15px;
     font-weight: 500;
@@ -166,7 +171,7 @@ body {
 .skills-input-container {
     display: flex;
     gap: 0.5rem;
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
 }
 
 .skills-input-container .form-input {
@@ -702,12 +707,13 @@ body {
 }
 
 .para-div{
-    height: 50%;
+    height: 100%;
     width: 4%;
     /* background-color: red; */
+    margin-top: 3%;
     display: flex;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     
 }
 .para-div p{
@@ -746,4 +752,11 @@ body {
 }
 #hide-salary{
     margin-left: 10px;
+}
+
+@media (max-width : 1184px) {
+    .hide{
+        display: none;
+    }
+    
 }
